crate/sinex-macros/tests/compile_fail/source_definition_missing_occurrence.stderr
error: source_definition: missing required 'occurrence_identity' (one of: natural, anchor, uuid5:<namespace>)
 --> tests/compile_fail/source_definition_missing_occurrence.rs:5:10
  |
5 | #[derive(SourceDefinition)]
  |          ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `SourceDefinition` (in Nightly builds, run with -Z macro-backtrace for more info)
